# HulkZip

./: .gitignore  .npmignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: ExercisePipeline.ts  ExercisePipleline.ts  dev.ts  landmark.ts  main.ts  pipeline.ts  webcam.ts
src/@types/: global.d.ts
src/ExerciseClassfier/: Classfier.ts  TfliteClassfier.ts
src/JointPosition/: MpJointPosition.ts
src/Preprocesser/: AnglePreprocesser.ts  DisPreprocesser.ts  DisPreprocesser2.ts  MergePreprocesser.ts  RangePreprocesser.ts  RangePreprocesser2.ts
src/class/: Classfier.ts
src/interface/: ExerciseClassfier.ts  ExercisePipeline.ts  JointPosition.ts  Preprocesser.ts
src/legacy/middleware/: JsMiddleware.ts  middleware.ts
src/legacy/middleware/wasm/src/: lib.rs
src/legacy/pose/: BzPose.ts  MpPose.ts
src/middleware/: JsMiddleware.ts
src/middleware/wasm/: Cargo.toml
src/pose/: BzPose.ts  MpPose.ts
static/: work.tflite
